Bug 688126 - Wrong line join
Summary: Wrong line join
Status: NOTIFIED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: Graphics Library (show other bugs)
Version: master
Hardware: PC Windows XP
: P3 normal
Assignee: Igor Melichev
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-06-06 10:59 UTC by Igor Melichev
Modified: 2008-12-19 08:31 UTC (History)
0 users

See Also:
Customer:
Word Size: ---


Attachments
raster.zip (481.48 KB, application/octet-stream)
2005-08-16 11:50 UTC, Igor Melichev
Details
patch.txt (8.62 KB, patch)
2005-08-17 05:31 UTC, Igor Melichev
Details | Diff
t2.ps (295 bytes, application/postscript)
2005-08-17 05:44 UTC, Igor Melichev
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Igor Melichev 2005-06-06 10:59:41 UTC
gswin32c.exe -dBATCH -r300 123-05-.ps
Produces a bewel join, but CPSI and me believe it must be a miter join.
Comment 1 Igor Melichev 2005-06-06 11:00:26 UTC
Created attachment 1425 [details]
123-05-.ps

The test file is a reduced Genoa test.
Comment 2 Igor Melichev 2005-06-06 11:01:00 UTC
The bug is important for the ps2write testing.
Comment 3 Igor Melichev 2005-08-11 11:36:00 UTC
A suggested patch
http://ghostscript.com/pipermail/gs-code-review/2005-August/004788.html
The commitment is delayed until a review by the PCL team.
Comment 4 Igor Melichev 2005-08-16 11:50:17 UTC
Created attachment 1625 [details]
raster.zip

Attaching rasters made with GS, Adobe CPSI and Adobe Acrobat Reader 4, packed
into a ZIP.
Comment 5 Igor Melichev 2005-08-17 05:31:58 UTC
Created attachment 1629 [details]
patch.txt

A suggested patch. It fixes the reported problem, but opens another problem -
probe3.pdf renders worse due to add_round_cap appears insufficiently smart.
Comment 6 Igor Melichev 2005-08-17 05:44:59 UTC
Created attachment 1630 [details]
t2.ps

A postscript file used to test CPSI about line join.
Comment 7 Igor Melichev 2005-08-17 06:22:30 UTC
See also Bug 688269.